# WindForLife

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml
apps/accounts/: admin.py  factories.py  urls.py
apps/accounts/api/v1/: serializers.py  validators.py  viewsets.py
apps/accounts/api/v1/services/: sign_in_usecase.py  sign_up_usecase.py
apps/accounts/management/commands/: generate_db_data.py
apps/accounts/migrations/: 0001_initial.py  0002_remove_account_is_active_and_more.py
apps/accounts/models/: account.py  time_stamped_model.py
apps/anemometers/: admin.py  apps.py  factories.py  urls.py
apps/anemometers/api/v1/: serializers.py  validators.py  viewsets.py  viewsets_old.py
apps/anemometers/api/v1/services/: list_anemometer_measurements_usecase.py  submit_anemometer_measurements_usecase.py
apps/anemometers/migrations/: 0001_initial.py  0002_rename_elevation_anemometer_altitude.py  0003_alter_anemometertag_name.py  0004_remove_anemometer_measurement_unit.py
apps/anemometers/models/: anemometer.py  anemometer_tag.py
apps/measurements/: admin.py  factories.py  urls.py
apps/measurements/api/v1/: viewsets.py
apps/measurements/migrations/: 0001_initial.py
apps/measurements/models/: measurement.py
config/: settings.py  urls.py
config/settings/: common.py  development.py  production.py
db_scripts/: generate_db_data.py
deployment/dev/: Dockerfile
postman-collection/: wind for life.postman_collection.json
utils/geo/: haversine_distance.py
utils/security/: jwt_authentication.py  jwt_utils.py
(+3 files in other folders)
